--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "test": "npm-run-all --print-label --parallel lint:*",
     "lint:lockfile": "lockfile-lint --path package-lock.json --type npm --validate-https --allowed-hosts npm",
     "lint:md": "remark . --frail",
+    "lint:js": "eslint .",
     "generate:md": "remark . --output",
     "lint:sensitive": "ban",
     "lint:travis": "travis-lint .travis.yml",
     "lint:peer": "npm ls >/dev/null"
   },
   "devDependencies": {
+    "@dsmjs/eslint-config": "1.0.40",
     "@dsmjs/remark-preset-lint": "1.0.8",
     "@form8ion/commitlint-config": "1.0.10",
     "@travi/travis-lint": "1.0.1",
@@ -37,5 +39,7 @@
     "remark-toc": "7.0.0",
     "remark-usage": "8.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@form8ion/eslint-config-cucumber": "1.4.0"
+  }
 }
