chore(husky): upgraded the config to match the installed version

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint:js": "eslint .",
     "generate:md": "remark . --output",
     "lint:sensitive": "ban",
-    "lint:peer": "npm ls >/dev/null"
+    "lint:peer": "npm ls >/dev/null",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@dsmjs/eslint-config": "1.0.70",
