chore(commitlint): switched to the config for this org

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "devDependencies": {
     "@dsmjs/eslint-config": "1.0.94",
     "@dsmjs/remark-preset-lint": "2.0.9",
-    "@form8ion/commitlint-config": "1.0.23",
     "ban-sensitive-files": "1.9.16",
+    "commitlint-config-dsmjs": "1.0.32",
     "cz-conventional-changelog": "3.3.0",
     "husky": "7.0.4",
     "lockfile-lint": "4.6.2",
